<resources>
    <string name="app_name">Azure IoT Central</string>
    <string name="welcome_text">Welcome, </string>
    <string name="login">Login</string>
    <string name="sign_out">Logout </string>
    <string name="loading">Getting data from IoTCentral...</string>
    <string name="scope">ScopeId</string>
    <string name="masterkey">Master Key</string>
    <string name="deviceid">Device Id</string>
    <string name="deviceName">Device name</string>
    <string name="models">Models</string>
    <string name="devices">Devices</string>
    <string name="next">Next</string>
    <string name="connect">Connect</string>
    <string name="create">Create</string>
    <string name="create_device">Create new Device</string>
    <string name="directory">Directory</string>
    <string name="subscription">Subscription</string>
    <string name="region">Region</string>
    <string name="rg">Resource Group</string>
    <string name="addrg">Create new +</string>
    <string name="appName">Application name</string>
    <string name="URL">URL</string>
    <string name="freeApp">Trial</string>
    <string name="paidApp">Pay-As-You-Go</string>
    <string name="contoso">Contoso</string>
    <string name="devkit">DevKit</string>
    <string name="domain">.azureiotcentral.com</string>
    <string name="linktofree">Please create a trial app through https://apps.azureiotcentral.com</string>
    <string name="loadingData">Loading...</string>
    <string name="scanBleTitle">Azure IoT Central - BLE discovery</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <!-- STANDARD -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="read">Read</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="select_telemetry">Select a telemetry property...</string>

    <string name="deviceid_hint">DeviceId can only have lowercase characters</string>
    <string name="app_running">Application Running</string>

</resources>
