<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d0e0f"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/appTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="20dp"
        android:background="#1a1d1e"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/freeBtn"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#1a1d1e"
            android:buttonTint="#FFFFFF"
            android:checked="true"
            android:text="@string/freeApp"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/paidBtn"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#1a1d1e"
            android:buttonTint="#FFFFFF"
            android:text="@string/paidApp"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <TextView
        android:id="@+id/linkText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#1a1d1e"
        android:linksClickable="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/linktofree"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="visible" />


    <ScrollView
        android:id="@+id/paidScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/templateGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="#1a1d1e"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:visibility="visible"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/contosoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#1a1d1e"
                    android:buttonTint="#FFFFFF"
                    android:checked="true"
                    android:text="@string/contoso"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/devkitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#1a1d1e"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/devkit"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

            <TextView
                android:id="@+id/tenantSpinnerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/tenantSpinner"
                android:text="@string/directory" />

            <Spinner
                android:id="@+id/tenantSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/subscriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/subscriptionsSpinner"
                android:text="@string/subscription" />

            <Spinner
                android:id="@+id/subscriptionsSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/regionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/regionSpinner"
                android:text="@string/region" />

            <Spinner
                android:id="@+id/regionSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/rgLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/resourceGroupsSpinner"
                    android:text="@string/rg" />

                <TextView
                    android:id="@+id/addRg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingEnd="5dp"
                    android:text="@string/addrg" />
            </LinearLayout>

            <Spinner
                android:id="@+id/resourceGroupsSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/appNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/appNameText"
                android:text="@string/appName" />

            <EditText
                android:id="@+id/appNameText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="" />

            <TextView
                android:id="@+id/urlLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/urlText"
                android:text="@string/URL" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/urlText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:inputType="" />

                <TextView
                    android:id="@+id/domain"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/domain" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/createAppBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginTop="10dp"
        android:text="@string/create"
        android:visibility="gone" />
</LinearLayout>