<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d0e0f">

    <TextView
        android:id="@+id/linkText"
        android:layout_width="330dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="8dp"
        android:background="#1a1d1e"
        android:linksClickable="true"
        android:text="@string/linktofree"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/appTypeGroup"
        android:layout_width="351dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="#1a1d1e"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/freeBtn"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#1a1d1e"
            android:buttonTint="#FFFFFF"
            android:checked="true"
            android:gravity="center"
            android:text="@string/freeApp"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/paidBtn"
            android:layout_width="135dp"
            android:layout_height="84dp"
            android:layout_weight="1"
            android:background="#1a1d1e"
            android:buttonTint="#FFFFFF"
            android:gravity="center"
            android:text="@string/paidApp"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <ScrollView
        android:id="@+id/paidScroll"
        android:layout_width="390dp"
        android:layout_height="0dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/paidGroup"
            android:layout_width="405dp"
            android:layout_height="520dp"
            android:paddingTop="20dp"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="332dp"
                android:layout_height="54dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="#1a1d1e"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/tenantSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <Spinner
                android:id="@+id/subscriptionsSpinner"
                android:layout_width="332dp"
                android:layout_height="54dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="8dp"
                android:background="#1a1d1e"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/resourceGroupsSpinner"
                android:layout_width="332dp"
                android:layout_height="54dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="270dp"
                android:layout_marginEnd="8dp"
                android:background="#1a1d1e"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/regionSpinner"
                android:layout_width="332dp"
                android:layout_height="54dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="190dp"
                android:layout_marginEnd="8dp"
                android:background="#1a1d1e"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tenantSpinnerLabel"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="36dp"
                android:text="@string/directory"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subscriptionLabel"
                android:layout_width="93dp"
                android:layout_height="19dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="80dp"
                android:text="@string/subscription"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/regionLabel"
                android:layout_width="93dp"
                android:layout_height="19dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="170dp"
                android:text="@string/region"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rgLabel"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="250dp"
                android:text="@string/rg"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/urlLabel"
                android:layout_width="188dp"
                android:layout_height="19dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="420dp"
                android:labelFor="@id/urlText"
                android:text="@string/URL"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appNameLabel"
                android:layout_width="188dp"
                android:layout_height="19dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="330dp"
                android:labelFor="@id/appNameText"
                android:text="@string/appName"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/appNameText"
                android:layout_width="332dp"
                android:layout_height="48dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="350dp"
                android:background="#1a1d1e"
                android:inputType=""
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/domain"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_marginStart="236dp"
                android:layout_marginTop="440dp"
                android:background="#1a1d1e"
                android:text="@string/domain"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/urlText"
                android:layout_width="197dp"
                android:layout_height="48dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="440dp"
                android:autofillHints=""
                android:background="#1a1d1e"
                android:inputType=""
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o" />

            <Button
                android:id="@+id/createAppBtn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginStart="236dp"
                android:layout_marginTop="490dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:text="@string/create"
                android:textColor="#000000"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/addRg"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="250dp"
                android:text="@string/addrg"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>


    </ScrollView>
</android.support.constraint.ConstraintLayout>