<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:orientation="vertical"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:id="@+id/deviceIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/deviceid"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <TextView
                android:id="@+id/deviceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/iconOK"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="end"
                android:src="@drawable/ic_check_black_24dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iconFAIL"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="end"
                android:src="@drawable/ic_clear_black_24dp"
                android:visibility="gone" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>


    <Button
        android:id="@+id/disconnectBLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:enabled="false"
        android:text="@string/menu_disconnect" />

    <Button
        android:id="@+id/connectBLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:enabled="false"
        android:text="@string/connect"
        android:visibility="gone" />
</LinearLayout>